--- a/.gitignore
+++ b/.gitignore
@@ -1,118 +1,101 @@
-# Dependencies
+###############################################
+# Node / Frontend
+###############################################
 node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# Build outputs
+dist/
+build/
+.vite/
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Production builds
-/backend/dist/
-/frontend/dist/
-/frontend/build/
-
-# Environment variables
+# Local environment files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.production
+frontend/.env
+backend/.env
 
-# Database
-*.db
-*.sqlite3
+# Cache
+**/.cache
+**/.parcel-cache
+*.tsbuildinfo
 
-# Logs
-logs
-*.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
+###############################################
+# Python / Django Middleware
+###############################################
 venv/
-ENV/
-env.bak/
-venv.bak/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 *.egg-info/
-dist/
-build/
-
-# Django
-*.log
-local_settings.py
 db.sqlite3
+db.sqlite3-journal
+middleware/db.sqlite3
 
-# IDE files
+# Django static/media run files
+staticfiles/
+media/
+middleware/static/
+middleware/media/
+
+###############################################
+# Generated Upload Files
+###############################################
+backend/src/uploads/
+backend/uploads/
+uploads/
+*.jpg
+*.jpeg
+*.png
+*.gif
+*.webp
+
+###############################################
+# Logs
+###############################################
+logs/
+*.log
+*.out
+*.err
+
+###############################################
+# OS Specific Files
+###############################################
+.DS_Store
+Thumbs.db
+desktop.ini
+
+###############################################
+# Docker
+###############################################
+docker-data/
+*.pid
+
+###############################################
+# TypeScript
+###############################################
+*.tsbuildinfo
+
+###############################################
+# VSCode / IDE
+###############################################
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Docker
-.dockerignore
-
-# Temporary files
-tmp/
-temp/
+###############################################
+# Coverage / Testing
+###############################################
+coverage/
+coverage-* 
+.nyc_output/
