--- a/backend/package.json
+++ b/backend/package.json
@@ -12,39 +12,46 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "redis": "^4.6.8",
-    "multer": "^1.4.5-lts.1",
+    "@types/axios": "^0.9.36",
     "aws-sdk": "^2.1459.0",
+    "axios": "^1.12.2",
+    "bcrypt": "^5.1.1",
     "bull": "^4.11.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "joi": "^17.9.2"
+    "helmet": "^7.0.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "redis": "^4.6.8"
   },
   "devDependencies": {
-    "@types/node": "^20.5.9",
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/pg": "^8.10.2",
-    "@types/multer": "^1.4.7",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.5",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "jest": "^29.6.4",
-    "ts-jest": "^29.1.1",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.5.9",
+    "@types/pg": "^8.10.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0"
+    "eslint": "^8.49.0",
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   },
-  "keywords": ["eco", "carbon-credits", "api", "express"],
+  "keywords": [
+    "eco",
+    "carbon-credits",
+    "api",
+    "express"
+  ],
   "author": "",
   "license": "MIT"
 }
